# real_estate

./: .env.example  .gitignore  guia.md  pyproject.toml
core/: settings.py  urls.py
core/settings/: base.py
pages/: admin.py  models.py  tests.py  views.py
pages/migrations/: 0001_initial.py
properties/: admin.py  filters.py  models.py  tests.py  views.py
properties/management/commands/: seed_demo.py
properties/migrations/: 0001_initial.py
templates/: base.html
templates/includes/: footer.html  header.html  property_card.html
templates/pages/: home.html
templates/properties/: property_detail.html  property_list.html
theme/static_src/: package-lock.json  tailwind.config.js
theme/static_src/src/: styles.css
